deploy/beverage-buzz/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beverage-buzz
  labels:
    app: beverage-buzz
